Refine mass edit confirmation

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -47,7 +47,8 @@
             var sabSpeedHistory = [$bytespersec_list];
             var newRelease = "$new_release";
             var newReleaseUrl = "$new_rel_url";
-            var confirmMassEdit = $confirm_mass_edit;
+            var confirmMassEditQueue = $confirm_mass_edit_queue;
+            var confirmMassEditHistory = $confirm_mass_edit_history;
             var glitterIsBeta = ("$version".search(/[develop|Alpha|Beta|RC]/)) > 0;
 
             var glitterTranslate = new Object();
